# MELI_Challenge

./: .gitignore  README.md  pyproject.toml
challenge/: __init__.py  eda_training.ipynb  new_or_used.py
challenge/dataset/: attributes.py  categories.py  create_dataset.ipynb  non_mercadopago_payments.py  pictures.py  preprocess.py  prices.py  quantities.py  seller.py  shipping.py  times.py  title.py  utils.py  variations.py  warranty.py
challenge/eda/: attributes.ipynb  automatic_relist.ipynb  buying_mode.ipynb  dates.ipynb  description.ipynb  eda_1st_step.ipynb  listing_type_id.ipynb  media.ipynb  parent_item_and_category_id.ipynb  payments.ipynb  price.ipynb  prices.ipynb  seller.ipynb  shipping.ipynb  stock_quantities.ipynb  tags.ipynb  title.ipynb  utils.py  variations.ipynb  warranty.ipynb
challenge/models/: train.ipynb
challenge/models/beto_model/: dataset.py  model.py  train.py
research/: 20250828_try_the_ds_function.py  20250829_attributes.py  20250829_base_price.py  20250829_column_type.py  20250829_deal_ids.py  20250829_listing_type_id.py  20250829_non_mercadopago_payments.py  20250829_price.py  20250829_seller_address.py  20250829_shipping.py  20250829_tags.py  20250829_variations.py  20250829_warranty.py  20250901_preprocess.py  20250901_preprocess2.py  20250901_preprocess_qa.py  20250901_title.py  20250901_xgboost.py  20250902_title_emb.py  20250902_title_emb_openai.py  20250902_title_emb_roberta.py  20250903_roberta_pca.py  20250903_run.py  20250903_times.py  20250903_titles.py  20250903_warranty.py  start.py
(+2 files in other folders)
